feat: added reset functionality
